fix required time alignment on add recipe screen

--- a/src/app/components/util/required-time-display/required-time-display.component.scss
+++ b/src/app/components/util/required-time-display/required-time-display.component.scss
@@ -15,6 +15,7 @@
 
   .content {
     margin-left: 0.4vw;
+    align-self: baseline;
   }
 }
 
